--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PN'
 - !lcsh 'Short story'
+- GITenberg
 title: 'Short Story Writing
 
   A Practical Treatise on the Art of The Short Story'
